--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PUDRA 1444</title>
     <meta
-      name="description"
-      content="An experiemntal 3D layout technique for HTML elements."
+      name="pudra1444"
+      content="Pudra1444 festival website."
     />
-    <meta
-      name="keywords"
-      content="3d, layout, html, css, bending, javascript, demo"
-    />
-    <meta name="author" content="Codrops" />
+    <meta name="author" content="Pupulis&Kukulis" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="https://use.typekit.net/yxd7izj.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
